Fixed number alignment when expanded

--- a/src/theme/common.scss
+++ b/src/theme/common.scss
@@ -641,9 +641,11 @@ details.mini:not([open]) {
 
   .list-number {
     text-align: right;
-    align-self: center;
-    padding: 10px;
+    padding: 0 10px;
     font-weight: bold;
+    height: 100%;
+    max-height: 57px;
+    line-height: 57px;
   }
 }
 
